...
        android:layout_marginBottom="22dp"
        android:background="@drawable/ic_send_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/ic_send"
            android:tint="@color/white" />

    </FrameLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_send_bg"
        android:fontFamily="@font/formula1_regular"
...
