...
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintStart_toEndOf="@+id/leftLine3"
                app:layout_constraintTop_toTopOf="@+id/textView7" />

            <ImageView
                android:id="@+id/liveChatCard"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:src="@drawable/calendar_shape"
                app:layout_constraintBottom_toBottomOf="@+id/infoCircuitoCard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/infoCircuitoCard"
...
                app:layout_constraintEnd_toEndOf="@+id/raceCard"
                app:layout_constraintTop_toTopOf="@+id/raceCard"
                app:srcCompat="@drawable/img_1" />


            <ImageView
                android:id="@+id/raceInfoBackArrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/back_arrow_white"
                app:layout_constraintStart_toStartOf="parent"
...
