<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/flag_icon"
        android:title="Calendar" />

    <item
        android:id="@+id/driversStandingsFragment"
        android:icon="@drawable/helmet_icon"
        android:title="Drivers" />

    <item
        android:id="@+id/championshipFragment"
        android:icon="@drawable/car_icon"
        android:title="Team" />
    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/baseline_person_24"
        android:title="Account" />
</menu>