...
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView10" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/prossimoEvento"
        app:layout_constraintTop_toBottomOf="@+id/imageView10">

        <ImageView
            android:id="@+id/proxEvCard"
            android:layout_width="match_parent"
            android:layout_height="215dp"
...
